# drivers-evergreen-tools

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  action.yml  ruff.toml
.evergreen/: check-connection.sh  clean.sh  compile-unix.sh  compile-windows.sh  compile.sh  config.yml  download-mongodb.sh  ensure-binary.sh  ensure-uv.sh  find-python3.sh  generate_task_config.py  get-distro.sh  handle-paths.sh  init-node-and-npm-env.sh  install-cli.sh  install-dependencies.sh  install-node.sh  install-rust.sh  is_python3.py  make-docs.sh  make-release.sh  mongodl.py  mongosh-dl.py  mongosh_dl.py  prep-variables.sh  prepare-env-and-resources.sh  process-utils.sh  pyproject.toml  requirements-cli.txt  retry-with-backoff.sh  run-atlas-proxy.sh  run-deployed-lambda-aws-tests.sh  run-load-balancer.sh  run-mongodb.sh  run-mongohouse-local.sh  run-orchestration.sh  run-perf-comp.sh  run-tests.sh  setup-test.sh  setup.sh  (+10 more)
.evergreen/atlas/: README.md  atlas-utils.sh  setup-atlas-cluster.sh  setup-secrets.sh  setup-test.sh  setup-variables.sh  setup.sh  teardown-atlas-cluster.sh  teardown-test.sh  teardown.sh
.evergreen/atlas_data_lake/: README.md  build-mongohouse-local.sh  config.yml  drivers-test-local.yaml  pull-mongohouse-image.sh  run-mongohouse-image.sh  run-mongohouse-local.sh  setup.sh  teardown.sh  test.yaml
.evergreen/auth_aws/: README.md  activate-authawsvenv.sh  activate_venv.sh  aws_common.py  aws_e2e_assume_role.js  aws_e2e_ec2.js  aws_e2e_ecs.js  aws_e2e_ecs.py  aws_e2e_ecs.sh  aws_e2e_oidc.js  aws_e2e_regular_aws.js  aws_e2e_web_identity.js  aws_setup.sh  aws_setup_oidc.js  aws_tester.py  aws_tester_no_uri.py  prepare_aws_env.sh  requirements-in.txt  requirements.txt  setup-secrets.sh  setup.sh  setup_secrets.py  setup_secrets.sh  teardown-test.sh  teardown.sh  write-oidc-config.sh
.evergreen/auth_oidc/: Dockerfile  README.md  activate-authoidcvenv.sh  activate_venv.sh  azure_entry.sh  docker_entry.sh  docker_entry_base.sh  ecr_push.sh  ecr_run.sh  local_bootstrap.sh  oidc_bootstrap.py  oidc_get_tokens.py  oidc_get_tokens.sh  oidc_write_orchestration.py  oidc_write_orchestration_azure.py  requirements-in.txt  requirements.txt  setup-secrets.sh  setup.sh  setup_oidc.js  setup_oidc_azure.js  setup_oidc_mongosh.js  start_local_server.sh  teardown.sh  test_azure.py  utils.py
.evergreen/aws_lambda/: README.md  run-deployed-lambda-aws-tests.sh  setup-atlas-cluster.sh  teardown-atlas-cluster.sh  teardown-lambda-function.sh
.evergreen/csfle/: README.md  activate-kmstlsvenv.sh  activate_venv.sh  await-servers.sh  await_servers.sh  bottle.py  fake_azure.py  kms_failpoint_server.py  kms_http_common.py  kms_http_proxy.py  kms_http_retry.py  kms_http_server.py  kms_kmip_client.py  kms_kmip_server.py  mock_kms.js  mongodl.py  pykmip.conf  pykmip.db  pykmip.db.bak  requirements-in-legacy.txt  requirements-in.txt  requirements-legacy.txt  requirements.txt  run-gce-test.sh  set-temp-creds.sh  setup-secrets.sh  setup.sh  setup_secrets.py  setup_secrets.sh  start-servers.sh  start_server.sh  start_servers.sh  stop-servers.sh  stop_server.sh  stop_servers.sh  teardown-test.sh  teardown.sh
.evergreen/docker/: Dockerfile  README.md  activate-dockerenv.sh  login.py  overwrite-orchestration.py  overwrite_orchestration.py  requirements.txt  run-client.sh  run-local-entrypoint.sh  run-local.sh  run-server.sh  run-test-entrypoint.sh  setup.sh  teardown.sh
.evergreen/github_app/: README.md  apply-labels.mjs  apply-labels.sh  assign-reviewer.mjs  assign-reviewer.sh  backport-pr.sh  create_or_modify_comment.mjs  create_or_modify_comment.sh  get-access-token.sh  get_backport_target.mjs  package-lock.json  package.json  setup-secrets.sh  utils.mjs  utils.sh
.evergreen/happy_eyeballs/: README.md  client.py  happy-eyeballs-client.py  happy-eyeballs-server.py  server.py  setup.sh  teardown.sh
.evergreen/k8s/: configure-pod.sh  download-kubectl.sh  setup-pod.sh
.evergreen/mongoproxy/: README.md  go.mod  go.sum  proxy.go  proxy_test.go  testdsl.go  testdsl_test.go
.evergreen/ocsp/: README.md  activate-ocspvenv.sh  ca_ocsp.crt  ca_ocsp.key  ca_ocsp.pem  certs.yml  mock-ocsp-responder-requirements.txt  mock_ocsp_responder.py  mock_ocsp_revoked.sh  mock_ocsp_valid.sh  ocsp_mock.py  ocsp_responder.crt  ocsp_responder.key  requirements-in.txt  requirements.txt  (+5 more)
(+269 files in other folders)
